[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://textures/player.png" type="Texture" id=2]
[ext_resource path="res://scripts/characters/CharacterMover.gd" type="Script" id=3]
[ext_resource path="res://scenes/Player/Scent.tscn" type="PackedScene" id=4]
[ext_resource path="res://textures/light.png" type="Texture" id=5]
[ext_resource path="res://textures/vision.png" type="Texture" id=6]
[ext_resource path="res://scenes/PlayerCamera.gd" type="Script" id=7]
[ext_resource path="res://scripts/characters/InteractionSystem.gd" type="Script" id=8]
[ext_resource path="res://audio/Player/footstep.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 6.90305
height = 11.3874

[node name="Player" type="KinematicBody2D"]
light_mask = 2
position = Vector2( 0, -1 )
collision_layer = 2
collision_mask = 6
script = ExtResource( 1 )
scent_scene = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.266804, 0.216137 )
shape = SubResource( 3 )

[node name="AreaLight" type="Light2D" parent="."]
texture = ExtResource( 5 )
mode = 2
range_item_cull_mask = 7
shadow_enabled = true
shadow_item_cull_mask = 7

[node name="Sprite" type="Sprite" parent="."]
z_index = 13
texture = ExtResource( 2 )

[node name="InteractionArea" type="Area2D" parent="Sprite"]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/InteractionArea"]
position = Vector2( 0, -8 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="VisionConeLight" type="Light2D" parent="Sprite"]
texture = ExtResource( 6 )
offset = Vector2( 0, -256 )
mode = 2
range_item_cull_mask = 7
shadow_enabled = true
shadow_item_cull_mask = 7

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
script = ExtResource( 7 )

[node name="ScentTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
autostart = true

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="CharacterMover" type="Node" parent="."]
script = ExtResource( 3 )
body_path = NodePath("..")

[node name="InteractionSystem" type="Node" parent="."]
script = ExtResource( 8 )
area_path = NodePath("../Sprite/InteractionArea")

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -16.0
